[package]
authors = ["pmnxis <pmnxis@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "papout-psm-rs"
version = "0.1.0"

[dependencies]
cortex-m-rtic = "0.6.0-alpha.5"
nb = "1.0.0"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.2"
features = ["cortex-m"]

[dependencies.stm32g0xx-hal]
git = "https://github.com/pmnxis/stm32g0xx-hal.git"
rev = "171920a6864981299cc1bb72470898e42369246a"
features = ["stm32g030", "rt"]


# this lets you use `cargo fix`!
[[bin]]
name = "papout-psm-rs"
test = false
bench = false

[profile.release]
opt-level = 1
codegen-units = 1 # better optimizations
debug = false # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

# [profile.dev]
# opt-level = 1   # opt-level = 2 generate 32KB+ binary, If you need replace IC STM32G031F8P6 and modify memory.x to replaced one. 
# codegen-units = 1 # better optimizations
# debug = true # symbols are nice and they don't increase the size on Flash
# lto = true # better optimizations